--- a/script.html
+++ b/script.html
@@ -8,7 +8,7 @@
 <body>
     <!-- <script src="getChefBirthday.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-    <script src="Bonus1.js"></script>
+    <script src="Bonus1-2.js"></script>
     <!-- <script src="Bonus2.js"></script> -->
 </body>
 </html>
